# PoultryCaduceus

./: README.md  RELEASE_GUIDE.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: chicken_caduceus_10k.yaml  finetune_mpra.yaml  pretrain.yaml
eQTL/: poultrycaduceus_github_README_update.md
notebooks/: data_preparation.ipynb
poultry_caduceus/: __init__.py  __version__.py  config.py  model.py  tokenizer.py
scripts/: chicken_dataset.py  prepare_data.py  pretrain.py  train_caduceus.py  train_chicken_caduceus_v8.py  upload_to_huggingface.py
tests/: test_model.py
